# BeeGees

./: .gitignore  BeeGees_env.yaml  MANIFEST.in  README.md  README_custom_blast_dbs.md  pyproject.toml  snakemake_run-sbatch.sh  snakemake_run.sh
beegees/: __init__.py  __main__.py
beegees/config/: config.yaml  multiqc_config.yaml
beegees/profiles/slurm/: config.yaml
beegees/resources/contaminants/: human_mitogenome.fasta
beegees/utils/: configs.py  snakemake_args.py
beegees/workflow/: Snakefile
beegees/workflow/scripts/: 01_human_mitogenome_filter.py  02_at_content_filter.py  05_consensus_generator.py  barcoding_outcome.py  fastp_summary_parser.py  multiqc_plots.R  rename_headers.py  structural_validation.py  tv_local_blast.py
config/: config.yaml
profiles/local/: config.yaml
tests/: conftest.py  test_aggregate_filter_metrics.py  test_at_content_filter.py  test_barcode_consensus_count.py  test_barcoding_outcome.py  test_cli.py  test_compile_barcoding_stats.py  test_config_validation.py  test_config_yaml.py  test_consensus_generator.py  test_csv_combiner_mge.py  test_fastp_summary_parser.py  test_human_cox1_filter.py  test_reference_filter.py  test_snakefile_dryrun.py  test_statistical_outlier_filter.py  test_structural_validation.py  test_tv_blast2taxonomy.py  test_tv_local_blast.py  test_utils.py  test_val_csv_merger.py
workflow/: Snakefile
workflow/scripts/: 01_human_cox1_filter.py  02_at_content_filter.py  03_outlier_filter_reference_seq.py  03_statistical_outlier_filter.py  04_reference_filter.py  05_consensus_generator.py  06_aggregate_filter_metrics.py  barcode_consensus_count.py  barcoding_outcome.py  compile_barcoding_stats.py  csv_combiner_mge.py  rename_headers.py  val_csv_merger.py
