[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "beegees"
version = "3.0.2"
description = "BeeGees: DNA barcoding from museum specimen genome skims via Snakemake"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    {name = "Dan A.J. Parsons", email = "d.parsons@nhm.ac.uk"},
    {name = "Rutger A. Vos", email = "b.price@nhm.ac.uk"},
    {name = "Ben W. Price", email = "rutger.vos@naturalis.nl" },
]

keywords = ["bioinformatics", "dna-barcoding", "snakemake", "genomics", "museum-specimens"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = []

[project.scripts]
beegees = "beegees.__main__:main"

[project.urls]
Homepage = "https://github.com/bge-barcoding/BeeGees"
Repository = "https://github.com/bge-barcoding/BeeGees"

[tool.setuptools.packages.find]
where = ["."]
include = ["beegees*"]

[tool.setuptools.package-data]
beegees = [
    "workflow/Snakefile",
    "workflow/scripts/*",
    "resources/**/*",
    "config/*",
    "profiles/**/*",
]
